added random japanese hiragana generator

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <main>
-  <h1>Yolo from Angular 2 App with Webpack</h1>
-  <img src="../../public/images/angular.png">
+  <!-- <h1>Yolo from Angular 2 App with Webpack</h1>
+  <img src="../../public/images/angular.png"> -->
+  <button (click)="generateWord()">Get Random Word!</button>
+  <h1>{{word}}</h1>
+
 </main>
